fix navbar on mobile

--- a/website/nextjs/components/markdown-styles.module.css
+++ b/website/nextjs/components/markdown-styles.module.css
@@ -44,7 +44,7 @@
 }
 /* Paragraph */
 .markdown p {
-  @apply mb-4 text-justify;
+  @apply mb-4;
 }
 /* Lists */
 .markdown ul,
