--- a/website/nextjs/styles/index.css
+++ b/website/nextjs/styles/index.css
@@ -24,8 +24,20 @@ nav a {
 .label {
   @apply text-xs font-semibold inline-block py-0.5 px-1 rounded mr-1 leading-normal align-middle;
 }
-.label:last {
+.label:last-child {
   @apply mr-0;
+}
+
+.nav-item {
+  @apply 
+    border-t-2 md:border-0 
+    w-full md:w-auto 
+    text-center 
+    py-2 md:py-0
+  ;
+}
+.nav-item:last-child {
+  @apply border-b-2 md:border-0;
 }
 
 /* purgecss start ignore */
